[Jacoco] - Removing duplicate argLine entry